--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "ProductMeasurementUnitGui module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
